--- a/_config.yml
+++ b/_config.yml
@@ -1,21 +1,26 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely need to edit after that.
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'jekyll serve'. If you change this file, please restart the server process.
-
 # Site settings
-title: My Jekyll static site
-email: har_aut@email.com
+title: My Personal Website
+email:
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://haris-git.github.io" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  haris-git
+  It 's my personal website.
+baseurl: "" # the subpath of your site, e.g. /blog/
+url: "" # the base hostname & protocol for your site
+
+# User setting
+owner: Charis Logothetis
+email: harislogothetis@gmail.com
+facebook_username:
+twitter_username:
+github_username: haris-git
+address:
+  - line:
+  - line:
+  # Feel free to add more lines here 
+telephone:
+copyright: Charis Logothetis
+
+# API settings
+google_api_key:
 
 # Build settings
 markdown: kramdown
